--- a/ProjectBank/Client/Pages/Search.razor
+++ b/ProjectBank/Client/Pages/Search.razor
@@ -1,4 +1,4 @@
-﻿@page "/search"
+@page "/search"
 @using System.Data.SqlTypes
 @using System.Security.Claims
 @inject AuthenticationStateProvider AuthenticationStateProvider
@@ -228,4 +228,3 @@
         }
     }
 }
-
