--- a/ProjectBank/Client/Shared/NavMenu.razor.css
+++ b/ProjectBank/Client/Shared/NavMenu.razor.css
@@ -60,13 +60,31 @@
         display: block;
     }
 }
+
+.favoriteList{
+    background:none;
+    width: 250px;
+    height: 350px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.favoriteList::-webkit-scrollbar-track {
+    background-color: #181818;
+}
+
+.favoriteList::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(10deg, #fd297b, #ff655b);
+    border-radius: 7px;
+}
+
 .favoriteList ul{
     color: #d7d7d7;
     cursor: pointer;
-    margin-top: 2%;
+    margin-top: 3%;
     margin-bottom: 0;
     margin-right: 0;
-    padding-right: 0;
+    padding-right: 2px;
 }
 
 .favoriteList ul:hover{
