--- a/ProjectBank/Client/wwwroot/css/browse.css
+++ b/ProjectBank/Client/wwwroot/css/browse.css
@@ -23,11 +23,20 @@
     box-shadow: 5px 7px #dcd8d8;
   }
   
+.aligner{
+  display: flex;
+}
+  
   .browse_all{
+    position: relative;
     color: #d7d7d7;
+    width: fit-content;
+    margin: 0;
+    padding: 0;
   }
   
   .browse_all_btn{
+    width: fit-content;
     background: none;
     border: none;
     color: #d7d7d7;
@@ -38,3 +47,9 @@
   .browse_all_btn:hover{
     color: #ffffff;
   }
+  
+  .filter_browse{
+    position: relative;
+    float: right;
+  }
+  
