Done did many todos

--- a/ProjectBank/Client/Pages/AccountSettings.razor
+++ b/ProjectBank/Client/Pages/AccountSettings.razor
@@ -17,7 +17,7 @@
             <RadzenLabel Text="Name:"/>
         </div>
         <div class="col-md-9">
-            <RadzenTextBox Disabled=true Placeholder=@_name style="width: 50%;" Name="Name"/>
+            <RadzenTextBox Disabled=true Placeholder=@_name style="width: 50%; background-color: white;" Name="Name"/>
         </div>
     </div>
     <div class="row">
@@ -25,7 +25,7 @@
             <RadzenLabel Text="Email:"/>
         </div>
         <div class="col-md-9">
-            <RadzenTextBox Disabled=true Placeholder=@_email style="width: 50%;" Name="Email"/>
+            <RadzenTextBox Disabled=true Placeholder=@_email style="width: 50%; background-color: white;" Name="Email"/>
         </div>
     </div>
     <div class="row">
@@ -33,18 +33,14 @@
             <RadzenLabel Text="Role:"/>
         </div>
         <div class="col-md-9">
-            <RadzenTextBox Disabled=true Placeholder=@_currentRole style="width: 50%;" Name="Role"/>
+            <RadzenTextBox Disabled=true Placeholder=@_currentRole style="width: 50%; background-color: white;" Name="Role"/>
         </div>
     </div>
 </RadzenFieldset>
 
-<RadzenButton Click=@Edit Text="Edit profile"/>
-<RadzenButton style="width: 160px" IsBusy=@_busyProfile Click=@OnBusyClickProfile Text="Save"/>
-
 <h2 style="padding-top: 2em">Profile picture:</h2>
 <RadzenFieldset class="mb-4">
     <div class="row">
-        
         @if (_account?.PictureUrl != null)
         {
             <div style="justify-content: center; align-content: center">
@@ -56,7 +52,7 @@
 </RadzenFieldset>
 
 
-<h2 style="padding-top: 3em; padding-bottom: 1em">Projects created by you:</h2>
+<h2 style="padding-top: 3em; padding-bottom: 1em">Projects ideas created by you:</h2>
 @if (_userProjects.Any())
 {
     <table class="table table-striped" style="color: white">
@@ -85,7 +81,6 @@ else
 
 @code {
     //VARIABLES
-    private bool _editing = true;
     private bool _busyProfile;
     private string? _name;
     private string? _email;
@@ -97,11 +92,6 @@ else
     private readonly List<ProjectDetailsDto?> _userProjects = new List<ProjectDetailsDto?>();
 
     //PAGE SCRIPTS
-    private void Edit()
-    {
-        _editing = !_editing;
-    }
-
     protected override async Task OnInitializedAsync()
     {
         var user = (await _authenticationStateProvider.GetAuthenticationStateAsync()).User;
@@ -125,21 +115,6 @@ else
     {
         var response = await _http.DeleteAsync($"/api/Project/{id}");
         Console.WriteLine(response.StatusCode);
-        _busyProfile = false;
         _uriHelper.NavigateTo(_uriHelper.Uri, forceLoad: true);
-    }
-
-    private async Task OnBusyClickProfile()
-    {
-        _busyProfile = true;
-        await Task.Delay(2000);
-        UpdateProfile();
-        _busyProfile = false;
-        _uriHelper.NavigateTo(_uriHelper.Uri, forceLoad: true);
-    }
-
-    private void UpdateProfile()
-    {
-    //...
     }
 }
