--- a/ProjectBank/Client/Pages/CreateProject.razor
+++ b/ProjectBank/Client/Pages/CreateProject.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>ProjectBank - CreateProject</PageTitle>
 <RadzenNotification/>
-<h2>Create a new project:</h2>
+<h2>Create a new project idea:</h2>
 
 <RadzenFieldset class="mb-4">
     <div class="row">
