--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -36,7 +36,7 @@
         </div>
          <div class="nav-item px-3">
             <NavLink class="nav-link" href="/createproject">
-            <span class="oi oi-pencil" aria-hidden="true"></span> Create a project
+            <span class="oi oi-pencil" aria-hidden="true"></span> Create project idea
             </NavLink>
         </div>
     </nav>
@@ -87,7 +87,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/">
-            <span class="oi oi-pencil" aria-hidden="true"></span> Claims
+            <span class="oi oi-pencil" aria-hidden="true"></span> Create project idea
             </NavLink>
         </div>
     </nav>
