--- a/ProjectBank/Client/Pages/Projects.razor
+++ b/ProjectBank/Client/Pages/Projects.razor
@@ -32,7 +32,7 @@ else
                         }
                 </div>
             <h3 class="h5" style="color:black;">Projects title: "@_project?.Title":</h3>
-            <h4 style="color:black;">Authored by: @_project?.AuthorName 
+            <h4 style="color:black;">Authored by: <x onclick="@(() => navigationManager.NavigateTo($"/user/{_project.AuthorName}"))" style="cursor: pointer;">@_project?.AuthorName</x>
                  <h5 style="color:black;"> (Role: @_role) </h5>
             </h4>
             <div class="d-flex flex-row">
