--- a/ProjectBank/Client/Pages/Search.razor
+++ b/ProjectBank/Client/Pages/Search.razor
@@ -1,4 +1,4 @@
-@page "/search"
+﻿@page "/search"
 @using System.Data.SqlTypes
 @using System.Security.Claims
 @inject AuthenticationStateProvider AuthenticationStateProvider
@@ -25,13 +25,13 @@
                 <div class="dropdown_menu_filter">
                     <div class="drop_filter_content">
                         <span style="text-decoration: underline">Degrees:</span> <br/>
-                        <input type="checkbox" id="bCheck" checked="@_bachelorChecked" @onclick="(() =>  OnCheck('B'))"/>
+                        <input type="radio" id="bCheck" checked="@_bachelorChecked" @onclick="(() =>  OnCheck('B'))"/>
                             <label for="bCheck" style="cursor: pointer">Bachelor</label> <br/>
                         
-                        <input type="checkbox" id="mCheck" checked="@_masterChecked"  @onclick="(() =>  OnCheck('M'))"/>
+                        <input type="radio" id="mCheck" checked="@_masterChecked"  @onclick="(() =>  OnCheck('M'))"/>
                             <label for="mCheck" style="cursor: pointer"> Master</label> <br/>
                         
-                        <input type="checkbox" id="pCheck" checked="@_phdChecked"  @onclick="(() =>  OnCheck('P'))"/>
+                        <input type="radio" id="pCheck" checked="@_phdChecked"  @onclick="(() =>  OnCheck('P'))"/>
                             <label for="pCheck" style="cursor: pointer"> PHD</label> <br/>
                         
                         <div class="center_btn" style="text-align: center">
@@ -216,17 +216,23 @@
     {
         if (s == 'B')
         {
-            _bachelorChecked = !_bachelorChecked;
+            _bachelorChecked = true;
+            _masterChecked = false;
+            _phdChecked = false;
         }
 
         if (s == 'M')
         {
-            _masterChecked = !_masterChecked;
+            _bachelorChecked = false;
+            _masterChecked = true;
+            _phdChecked = false;
         }
 
         if (s == 'P')
         {
-            _phdChecked = !_phdChecked;
+            _bachelorChecked = false;
+            _masterChecked = false;
+            _phdChecked = true;
         }
 
         if (s == 'C')
