--- a/ProjectBank/Client/wwwroot/css/browse.css
+++ b/ProjectBank/Client/wwwroot/css/browse.css
@@ -52,12 +52,14 @@
     display: flex;
     justify-items: right;
     justify-content: right;
+    margin-right: 20px;
   }
   
   .align-right{
     display: flex;
     justify-content: right;
     justify-items: right;
+    margin-right: 20px;
   }
   
   .dropdown_menu_filter_browse{
