--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -1,8 +1,8 @@
 
-﻿@inject HttpClient Http
-@inject AuthenticationStateProvider AuthenticationStateProvider
-@inject NavigationManager navigationManager
-@inject ProjectStateChanged projectsChanged; //forsøg
+@inject HttpClient _http
+@inject AuthenticationStateProvider _authenticationStateProvider
+@inject NavigationManager _navigationManager
+@inject ProjectStateChanged _projectsChanged; //forsøg
 
 <AuthorizeView>
     <Authorized>
