--- a/ProjectBank/Client/Pages/AccountSettings.razor
+++ b/ProjectBank/Client/Pages/AccountSettings.razor
@@ -39,17 +39,24 @@
 </RadzenFieldset>
 
 <h2 style="padding-top: 2em">Profile picture:</h2>
-<RadzenFieldset class="mb-4">
-    <div class="row">
-        @if (_account?.PictureUrl != null)
+@if (_account != null)
+{
+    <RadzenFieldset class="mb-4">
+        <div class="row">
+            @if (_account?.PictureUrl != null)
+            {
+                <div style="justify-content: center; align-content: center">
+                    <img class="card-img-top" size="60%" src=@_account?.PictureUrl alt="No Profile Picture" style="padding: 1em;justify-content: center; align-content: center "/>
+                </div>
+            }
+        </div>
+        @if (_account?.Id != null)
         {
-            <div style="justify-content: center; align-content: center">
-                <img class="card-img-top" size="60%" src=@_account?.PictureUrl alt="No Profile Picture" style="padding: 1em;justify-content: center; align-content: center "/>
-            </div>
+            <div><ImageUploader Id="_account!.Id" IsProject="false"></ImageUploader></div>
         }
-    </div>
-    <div><ImageUploader Id="_account!.Id" IsProject="isProject"></ImageUploader></div>
-</RadzenFieldset>
+    </RadzenFieldset>
+}
+
 
 
 <h2 style="padding-top: 3em; padding-bottom: 1em">Projects ideas created by you:</h2>
